añadidos servicios de registro, inicio de sesion, vinculacion con Spotify.